--- a/SDK/RemoteControl/platformio.ini
+++ b/SDK/RemoteControl/platformio.ini
@@ -8,13 +8,9 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:esc_pwm_tester]
+
+[env:Client]
 platform = espressif32
 board = esp32s3usbotg ; change this accordingly
 framework = arduino
-lib_extra_dirs = lib
-lib_deps = 
-	rb-enantel/RC_ESC@^1.1.0
 monitor_filters = esp32_exception_decoder
-; monitor_port = COM32
-; monitor_speed = 115200
