--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,23 @@
 
 site/
 
+*-backups/
+
+*.000
+*.bak
+*.bck
+*.kicad_pcb-bak
+*.kicad_sch-bak
+*.kicad_prl
+*.sch-bak
+*~
+_autosave-*
+*.tmp
+*-save.pro
+*-save.kicad_pcb
+fp-info-cache
+/build
+
 .pio
 .vscode/.browse.c_cpp.db*
 .vscode/c_cpp_properties.json
